--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-beautifulsoup4==4.10.0
-bs4==0.0.1
-matplotlib==3.4.3
-networkx==2.7
-nltk==3.6.5
-numpy==1.21.3
-pandas==1.3.4
-Pillow==8.4.0
-selenium==4.1.0
-scikit-learn==0.24.2
-scipy==1.7.3
-seaborn==0.11.2
-streamlit==1.5.0
+matplotlib
+nltk
+pandas
+scikit-learn
+selenium
+streamlit
